# ai-newsletter-curator

./: .gitignore  CLAUDE.md  README.md  ai_sender_whitelist.json  pyproject.toml  test_gmail_auth.py  test_yahoo_auth.py
scripts/: inspect_sender_urls.py  run_ingestion.py  save_nejm_session.py  scan_new_senders.py  search_sender.py
src/: config.py  exceptions.py  models.py
src/app/: chat.py  streamlit_app.py
src/ingestion/: gmail_client.py  whitelist.py  yahoo_client.py
src/processing/: classifier.py  embeddings.py  link_fetcher.py  nejm_fetcher.py  parser.py
src/storage/: database.py  vector_store.py
tests/: test_ingestion.py  test_models.py  test_processing.py  test_storage.py
